--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.19.0",
-    "prisma": "^7.4.1"
+    "prisma": "^7.4.1",
+    "stripe": "^20.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.14"
